--- a/src/popup.scss
+++ b/src/popup.scss
@@ -45,6 +45,72 @@ body {
 	}
 }
 
-#result {
-	font-size: medium;
+.result {
+	position: relative;
+	max-width: 370px;
+	display: none;
+
+	#text {
+		font-size: medium;
+		background-color: #eeeeee;
+		padding: 20px;
+		padding-right: 50px;
+		word-wrap: break-word;
+	}
+
+	#copy-btn {
+		position: absolute;
+		top: 20px;
+		right: 10px;
+		padding: 4px 4px 1px 1px;
+		cursor: pointer;
+		border: none;
+		outline: none;
+		border-radius: 8px;
+		background-color: #e2e2e2;
+		// display: none;
+
+		&:active {
+			background-color: #d5d5d5;
+		}
+
+		&::before {
+			content: "Copied";
+			position: absolute;
+			top: -40px;
+			right: -10px;
+			background: #7fa3ff;
+			color: #fff;
+			padding: 8px 15px;
+			border-radius: 15px;
+			font-size: 15px;
+			display: none;
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			top: -15px;
+			right: 10px;
+			width: 10px;
+			height: 10px;
+			background: #7fa3ff;
+			transform: rotate(45deg);
+			display: none;
+		}
+
+		#copy {
+			width: 24px;
+			height: 24px;
+		}
+	}
+
+	&.active {
+		#copy-btn {
+			&::before,
+			&::after {
+				display: block;
+			}
+		}
+	}
 }
